--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.8'
 
 services:
-  zookeeper:
-    image: zookeeper:latest
+  zk:
+    image: wurstmeister/zookeeper:latest
     ports:
-      - "2181:2181"
+      - "3181:2181"
 
   kafka:
-    image: apache/kafka:latest
+    image: wurstmeister/kafka:latest
     ports:
       - "9092:9092"
     expose:
@@ -17,7 +17,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: zk:3181
       KAFKA_CREATE_TOPICS: "my-topic:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
