--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,92 @@
-version: '3.8'
-
+version: '2.1'
 services:
-  zk:
-    image: wurstmeister/zookeeper:latest
+  zoo1:
+    image: 'confluentinc/cp-zookeeper:7.3.2'
+    hostname: zoo1
+    container_name: zoo1
     ports:
-      - "3181:2181"
-
-  kafka:
-    image: wurstmeister/kafka:latest
-    ports:
-      - "9092:9092"
-    expose:
-      - "9093"
+      - '3181:2181'
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zk:3181
-      KAFKA_CREATE_TOPICS: "my-topic:1:1"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      ZOOKEEPER_CLIENT_PORT: 3181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: 'zoo1:2888:3888;zoo2:2888:3888;zoo3:2888:3888'
+  zoo2:
+    image: 'confluentinc/cp-zookeeper:7.3.2'
+    hostname: zoo2
+    container_name: zoo2
+    ports:
+      - '3182:2182'
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 3182
+      ZOOKEEPER_SERVER_ID: 2
+      ZOOKEEPER_SERVERS: 'zoo1:2888:3888;zoo2:2888:3888;zoo3:2888:3888'
+  zoo3:
+    image: 'confluentinc/cp-zookeeper:7.3.2'
+    hostname: zoo3
+    container_name: zoo3
+    ports:
+      - '3183:2183'
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 3183
+      ZOOKEEPER_SERVER_ID: 3
+      ZOOKEEPER_SERVERS: 'zoo1:2888:3888;zoo2:2888:3888;zoo3:2888:3888'
+  kafka1:
+    image: 'confluentinc/cp-kafka:7.3.2'
+    hostname: kafka1
+    container_name: kafka1
+    ports:
+      - '9092:9092'
+      - '29092:29092'
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:3181,zoo2:3182,zoo3:3183'
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: 'kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO'
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+  kafka2:
+    image: 'confluentinc/cp-kafka:7.3.2'
+    hostname: kafka2
+    container_name: kafka2
+    ports:
+      - '9093:9093'
+      - '29093:29093'
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka2:19093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093,DOCKER://host.docker.internal:29093'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:3181,zoo2:3182,zoo3:3183'
+      KAFKA_BROKER_ID: 2
+      KAFKA_LOG4J_LOGGERS: 'kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO'
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+  kafka3:
+    image: 'confluentinc/cp-kafka:7.3.2'
+    hostname: kafka3
+    container_name: kafka3
+    ports:
+      - '9094:9094'
+      - '29094:29094'
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka3:19094,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094,DOCKER://host.docker.internal:29094'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: 'zoo1:3181,zoo2:3182,zoo3:3183'
+      KAFKA_BROKER_ID: 3
+      KAFKA_LOG4J_LOGGERS: 'kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO'
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
